--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ author = Carolin Leluschko
 author-email = carolin.leluschko@dfki.de
 version = 0.0.1
 license = MIT
-home-page = https://git.ni.dfki.de/cleluschko/litter_assessment_service
+home-page = https://github.com/DFKI-NI/litter_assessment_service
 classifier =
     Intended Audience :: Information Technology
     Intended Audience :: System Administrators
